# Tetris-in-C

./: .CMakeCache.txt  .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install.bat  local_prepare.bat  make_install.bat  uninstall.bat
2player_src/: 2player_main.c
2player_src/model/: consts_2p.c  consts_2p.h  drawers_2p.c  drawers_2p.h  handlers_2p.c  handlers_2p.h  model_2p.c  model_2p.h
2player_src/sources_2p/: consts_2p.c  consts_2p.h  drawers_2p.c  drawers_2p.h  handlers_2p.c  handlers_2p.h  model_2p.c  model_2p.h
File_System/: file_system.c  file_system.h  file_system_game_status.c  file_system_game_status.h  file_system_linked_list.c  file_system_linked_list.h  file_system_username_cache.c  file_system_username_cache.h
File_System/debug/: file_debug.c
Launcher/: launcher_main.c  splash_screen.c  模板.c
Leader_Board/: leaderboard_main.c
Linked_List/: linkedlist.c  linkedlist.h
Serial/: Serial.c  Serial.h  serial_util.c  serial_util.h
Serial/debug/: serial_debug.c  serial_debug_old.c
Sound/: sound.c  sound.h
Sound/debug/: sound_debug.c
doc/: Manual.md
launcher/: launcher_main.c  menu window.dev  模板.c
libgraphics/: graphics.c  graphics.h
simpleGUI/: imgui.c  imgui.h
single_src/: single_main.c
single_src/controller/: handlers.c  handlers.h
single_src/model/: consts.c  consts.h  model.c  model.h
single_src/view/: drawers.c  drawers.h
src/: main.c
src/controller/: handlers.c
src/model/: consts.c  consts.h  main.c  model.c  model.h
src/view/: drawers.c  drawers.h
